# tapeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TECH_DEBT.md  fly.toml  generate_linkedin_cover.py
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  news-freshness-cron.yml  post-deploy-seo.yml  uptime-monitor.yml
backend/: alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial.py  20260422_0002_users_billing_alerts.py  20260422_0003_differentiation.py  20260422_0004_native_auth.py  20260422_0005_admin_flag.py  20260422_0006_calendar_events.py  20260422_0007_sales_structure.py  20260427_0008_institutional_holdings.py  20260427_0009_user_drip_state.py  20260427_0010_idempotency_and_voting.py  20260427_0011_user_phone_number.py  20260429_0012_ticker_confidence.py  20260429_0013_user_discord_webhook.py  20260509_0014_widen_news_tickers.py  20260510_0015_telegram_link_tokens.py  20260513_0016_user_referral_credit_months.py  20260516_0017_user_last_seen_at.py  20260516_0018_user_email_prefs.py  20260516_0019_insider_transactions.py  20260518_0020_user_onboarding_fields.py  20260518_0021_watchlist_last_alert_at.py  20260518_0022_watchlists_and_presets.py  20260519_0023_user_email_prefs_weekly_newsletter.py  20260519_0024_email_verification.py  20260519_0025_newsletter_and_signup_utm.py  20260523_0026_inbox_auto_handler.py  20260524_0027_inbox_classification_log.py  20260524_0027_password_reset_and_undeliverable.py  20260524_0028_inbox_classification_log.py  20260530_0028_mfa_totp.py  20260601_0029_retention_lifecycle.py  20260601_0030_checkout_abandonment.py  20260601_0031_sub_billing_period.py  20260601_0032_api_keys.py  20260602_0033_news_tickers_trgm.py  20260615_0034_clamp_scorecard_scores.py  20260616_0035_scanner_composite_index.py  20260619_0034_bigint_volume_shares.py  20260619_0036_merge_heads.py  20260620_0037_freemium_lookup_meter.py  (+5 more)
backend/app/: __init__.py  config.py  db.py  main.py  sentry_filter.py
backend/app/models/: __init__.py  api_key.py  calendar_events.py  cap_events.py  congress.py  email_verification_token.py  holdings.py  inbox.py  inbox_classification_log.py  insider_transaction.py  news.py  newsletter.py  password_reset_token.py  regime.py  roadmap_vote.py  scanner_preset.py  scorecard.py  squeeze.py  telegram_token.py  ticker.py  user.py  watchlist.py  web_push.py  webhook_event.py
backend/app/routers/: __init__.py  account.py  admin.py  alerts.py  api_keys.py  api_v1.py  auth.py  billing.py  briefing.py  calendar_routes.py  congress.py  contact.py  export.py  heatmap.py  holdings.py  inbox.py  internal.py  me.py  news.py  newsletter.py  oauth.py  presets.py  referrals.py  regime.py  roadmap.py  scanner.py  scorecard.py  squeeze.py  stream.py  telegram.py  ticker.py  unsubscribe.py  usage.py  watchlist.py  watchlists.py  webhooks.py
backend/app/scripts/: check_news_freshness.py  diagnostics.py  mint_founder_friends_coupon.py  remap_sectors.py  seed_owner.py  set_tier.py  walk_forward_backtest.py
backend/app/services/: alerts.py  analytics.py  api_keys.py  auth.py  benzinga_feed.py  billing.py  bot_protection.py  briefing.py  calendar_feed.py  cap_events.py  discord.py  edgar_feed.py  email.py  email_checkout.py  email_design.py  email_inbox.py  email_prefs.py  fear_greed.py  finnhub_feed.py  fred_feed.py  growth_bot.py  historical_bars.py  inbox_classifier.py  inbox_kill_switch.py  inbox_pipeline.py  inbox_reply.py  inbox_router.py  inbox_telegram_alert.py  inbox_templates.py  index_now.py  lifecycle.py  mfa.py  mock_feed.py  news_feed.py  newsletter.py  polygon_feed.py  pubsub.py  quiver_feed.py  rate_limit.py  reddit_inbox.py  (+19 more)
backend/app/workers/: signal_publisher.py
backend/tests/: conftest.py  test_account_lifecycle_emails.py  test_activation_milestone.py  test_admin_recontact.py  test_alembic_single_head.py  test_api_keys.py  test_asset_class_guard.py  test_auth_hardening.py  test_bigint_columns.py  test_billing_checkout.py  test_billing_checkout_guard.py  test_billing_reminders.py  test_cap_hit_instrumentation.py  test_checkout_recovery.py  test_congress_preview.py  test_csv_export.py  test_dunning.py  test_edgar_feed.py  test_email_checkout.py  test_email_design.py  test_email_prefs.py  test_email_preview.py  test_email_verification.py  test_free_alert_taste.py  test_freemium_lookups.py  test_heatmap_name.py  test_holdings_preview.py  test_inbox_approve.py  test_inbox_classifier.py  test_inbox_classifier_llm.py  test_inbox_failclosed.py  test_inbox_kill_switch.py  test_inbox_pipeline.py  test_inbox_prescriptive_guard.py  test_inbox_reddit.py  test_inbox_reply.py  test_inbox_router.py  test_inbox_stats.py  test_inbox_stats_errors.py  test_inbox_telegram.py  (+52 more)
docs/: ARCHITECTURE.md  AUTOMATION.md  AUTONOMY.md  BACKTEST.md  BRAND_SERP_KIT.md  COMPLIANCE_COPY_RULES.md  DATA_SOURCES.md  EMAIL_AUDIT_2026-05-17.md  LAUNCH_DAY.md  LAUNCH_POSTS.md  LEGAL_CHECKLIST.md  LICENSE_AUDIT.md  MORNING_QUEUE.md  OFFSITE.md  OPERATIONS.md  PHASE_1_EXECUTION_PLAN.md  PRICING.md  SCORING_AUDIT_2026-06-01.md  SEO.md  launch-strategy.md
docs/growth/: fintwit_list.csv  fintwit_outreach.md  fintwit_replies_drafted.md  linkedin_outreach.md  linkedin_posts_4_to_12.md  newsletter_outreach.md  podcast_pitches.md  reddit_calendar.md  reddit_karma_comments.md  tweet_schedule.md  x_thread_1_continuation.md  x_threads_2_to_12.md  youtuber_outreach.md
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  eslint.config.mjs  fly.toml  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-setup.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
infra/: Dockerfile  docker-compose.yml
scripts/: arm-deploy.ps1  attach-file-to-picker.ps1  bootstrap.ps1  copy-compliance.allow.json  deploy-backend.ps1  enable-ci-deploy.ps1  funnel_report.py  lint-copy-compliance.mjs  lint-copy-compliance.test.mjs  run_local.ps1  run_nodocker.ps1  tighten-spacing.py
(+342 files in other folders)
