[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[project]
name = "tapeline-backend"
version = "0.1.0"
description = "Tapeline backend — FastAPI + scoring worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.3",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "python-dateutil>=2.9.0",
    "stripe>=11.3.0",
    "resend>=2.5.0",
    "sse-starlette>=2.1.3",
    "svix>=1.40.0",                  # Clerk webhook signature verification
    "cryptography>=43.0.0",          # JWT signature verification
    "bcrypt>=4.2.0",                 # password hashing
    "pyjwt>=2.10.0",                 # session JWT signing
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
